@startuml

title __EASY_CALL.APP's Class Diagram__\n

  namespace com.example.easy_call {
    class com.example.easy_call.BuildConfig {
    }
  }
  

  namespace com.example.easy_call {
    class com.example.easy_call.FirstFragment {
    }
  }
  

  namespace com.example.easy_call {
    class com.example.easy_call.MainActivity {
    }
  }
  

  namespace com.example.easy_call {
    class com.example.easy_call.SecondFragment {
    }
  }
  

  com.example.easy_call.FirstFragment -up-|> androidx.fragment.app.Fragment
  com.example.easy_call.MainActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.easy_call.SecondFragment -up-|> androidx.fragment.app.Fragment


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
